# Speed-Rush-2D-contract

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  car_nft_contract_info.txt  car_part_contract_info.txt  contract_info.md  hardhat.config.js  package-lock.json  package.json
artifacts-zk/contracts/CarAccount.sol/: CarAccount.json
artifacts-zk/contracts/CarFactory.sol/: CarFactory.json  ICarNFT.json  IERC6551Registry.json
artifacts-zk/contracts/CarNFT.sol/: CarNFT.dbg.json  (+1 more)
cache-zk/: solidity-files-cache.json  validations.json
car_nft_contract/: Cargo.toml
car_nft_contract/car_types/: Cargo.toml
car_nft_contract/src/: lib.rs
car_part_contract/: Cargo.toml  mnemonic.txt
car_part_contract/car_types/src/: lib.rs
car_part_contract/src/: lib.rs
contracts/: CarAccount.sol  CarFactory.sol  CarMarketplace.sol  CarNFT.sol  CarPart.sol  CarWorkshop.sol  ERC6551Registry.sol  ICarNFT.sol  ICarPart.sol  ICarWorkshop.sol  IRaceLeaderboard.sol  LensNFT.sol  RaceLeaderboard.sol
deployments-zk/: deployment-lensTestnet-2024-12-26T05-53-12-510Z.json  deployment-lensTestnet-2024-12-26T22-05-35-965Z.json  deployment-lensTestnet-2024-12-26T22-12-53-424Z.json  deployment-lensTestnet-2024-12-26T22-20-58-219Z.json  deployment-lensTestnet-2025-01-04T01-22-48-079Z.json  deployment-lensTestnet-2025-01-04T05-57-31-626Z.json  deployment-lensTestnet-2025-01-04T18-34-24-794Z.json  deployment-lensTestnet-2025-01-05T04-46-41-708Z.json  deployment-lensTestnet-2025-01-05T04-56-08-964Z.json  deployment-lensTestnet-2025-01-06T01-16-54-202Z.json
scripts/: checkCarParts.js  deploy.js  deployCarSystem.js  getCarMetadata.js  manage.js  mintCarFromBackend.js  setMintPrice.js  setMintPriceAndWithdraw.js  setPrice.js  setURI.js  testBuyCar.js  testEquipUnequip.js  testMintCar.js  testMintPrice.js  testPartTracking.js  testReplaceParts.js  testSwapEngines.js  upgradeCarNFT.js  withdraw.js  withdrawFunds.js
xion/: go.mod
xion-contracts/: .gitignore  Cargo.toml
xion-contracts/artifacts/: checksums.txt  xion_contracts.wasm
xion-contracts/car_part_contract/: Cargo.toml
xion-contracts/scripts/: deploy.rs
xion-contracts/src/: lib.rs
xion-contracts/src/contracts/: car_nft.rs  car_part.rs  mod.rs
xion/scripts/: deploy.rs
(+42 files in other folders)
