[package]
name = "car_nft_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = "1.5.0"
schemars = "0.8.12"
serde = { version = "1.0.188", features = ["derive"] }
cw-storage-plus = "1.1.0"
car_types = { path = "./car_types" }

[dev-dependencies]
cosmwasm-schema = "1.5.0"
cw-multi-test = "0.20.0" 