[package]
name = "car_part_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = "1.1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", features = ["derive"] }
cw-storage-plus = "1.0.1"
car_types = { path = "./car_types" }

[dev-dependencies]
cosmwasm-schema = "1.1.0" 