[package]
name = "xion-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for XION network"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.1.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = "1.0.49"

[dev-dependencies]
cosmwasm-schema = "1.5.0"
cw-multi-test = "0.17.0"
