[package]
name = "xion-contracts"
version = "0.1.0"
edition = "2021"
description = "Smart contracts for XION network"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "deploy"
path = "scripts/deploy.rs"

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.5.1"
cosmwasm-storage = "1.5.1"
cw-storage-plus = "1.2.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"

[dev-dependencies]
cosmwasm-schema = "1.5.1"
cw-multi-test = "0.17.0"
